fixed mixed source error elsewhere

--- a/gre-list.html
+++ b/gre-list.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Tyrannosaurus Prep is a game that quizzes you over SAT and GRE vocab words." />
     <meta name="keywords" content="sat,vocab,gre,vocabulary,practice,quiz,questions,game,prep" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/main.css" />
     <link type="text/css" rel="stylesheet" href="css/mainbuttons.css" />
     <link rel="icon" href="images/favicon.png" />
