made upgrade buttons on word list pages

--- a/gre.html
+++ b/gre.html
@@ -105,7 +105,7 @@
     <span class="close">&times;</span>
 	<table><tr>
 	<td>
-		<img src="images/dino.png" id="dino" style="width: 100px; height: auto;" />
+		<img src="images/dino.png" style="width: 100px; height: auto;" />
 	</td>
     <td style="width: 100%">
 		<p>For just $3.99, you can access all five levels<br /> of Tyrannosaurus Prep for three months!</p>
