--- a/sat.html
+++ b/sat.html
@@ -108,7 +108,7 @@
 		<img src="images/dino.png" style="width: 100px; height: auto;" />
 	</td>
     <td style="width: 100%">
-		<p>For just $3.99, you can access all five levels<br /> of Tyrannosaurus Prep for three months!</p>
+		<p>For just $3.99, you'll gain access all five levels<br /> of Tyrannosaurus Prep for three months!</p>
 
 		<table style="width: 100%;"><tr><td style="width: 40%;">
 		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -123,7 +123,6 @@
 		<input type="hidden" name="shipping" value="0.00">
 		<input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHosted">
 		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 		</form>
 		</td>
 		<td style="width: 20%; position: relative; bottom: 8px;">or</td>
