changed to relative url links

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 	
     <div class="outlined" style="margin: auto; margin-top: 20px; padding: 10px; width: 500px;">
 		<div id="buttonarea">
-			<a href="http://www.tyrannosaurusprep.com/sat.html" class="buttons"><button id="sat" onclick="location.href='http://www.tyrannosaurusprep.com/sat.html'; return false;">SAT</button></a>
+			<a href="sat.html" class="buttons"><button id="sat" onclick="location.href='sat.html'; return false;">SAT</button></a>
 	  
 			<img src="images/dino.png" id="dino" style="width: 40px; height: auto;" />
 	  
-			<a href="http://www.tyrannosaurusprep.com/gre.html" class="buttons"><button id="gre" onclick="location.href='http://www.tyrannosaurusprep.com/gre.html'; return false;">GRE</button></a>
+			<a href="gre.html" class="buttons"><button id="gre" onclick="location.href='gre.html'; return false;">GRE</button></a>
 
 			<div id="upgraded"></div>
 		</div>
@@ -40,9 +40,9 @@
 	
     <div id="footer">
 
-      <p>Copyright &copy; 2022 <a href="http://www.tyrannosaurusprep.com/">Tyrannosaurus Prep</a></p>
-      <p><a href="http://www.tyrannosaurusprep.com/sat.html">SAT vocab practice game</a> | <a href="http://www.tyrannosaurusprep.com/gre.html">GRE vocab practice game</a></p>
-      <p><a href="http://www.tyrannosaurusprep.com/sat-list.html">SAT words list</a> | <a href="http://www.tyrannosaurusprep.com/gre-list.html">GRE words list</a></p>
+      <p>Copyright &copy; 2022 <a href="/">Tyrannosaurus Prep</a></p>
+      <p><a href="sat.html">SAT vocab practice game</a> | <a href="gre.html">GRE vocab practice game</a></p>
+      <p><a href="sat-list.html">SAT words list</a> | <a href="gre-list.html">GRE words list</a></p>
       <p>email: webmaster at TyrannosaurusPrep dot com</p>
     </div>
 	
