--- a/sat.html
+++ b/sat.html
@@ -30,7 +30,7 @@
 
     <div id="header">
 	<table style="margin: auto;"><tr><td>
-	<a href="tyrannosaurusprep.com"><img src="images/logo.png" id="logo" style="height: 90px; width: auto;" /></a>
+	<a href="/"><img src="images/logo.png" id="logo" style="height: 90px; width: auto;" /></a>
 	</td>
 	<td style="width: 10%;"></td>
 	<td style="vertical-align: bottom;">
@@ -88,10 +88,9 @@
     </div>
 	
     <div id="footer">
-
-      <p>Copyright &copy; 2022 <a href="http://www.tyrannosaurusprep.com/">Tyrannosaurus Prep</a></p>
-      <p><a href="http://www.tyrannosaurusprep.com/sat.html">SAT vocab practice game</a> | <a href="http://www.tyrannosaurusprep.com/gre.html">GRE vocab practice game</a></p>
-      <p><a href="http://www.tyrannosaurusprep.com/sat-list.html">SAT words list</a> | <a href="http://www.tyrannosaurusprep.com/gre-list.html">GRE words list</a></p>
+      <p>Copyright &copy; 2022 <a href="/">Tyrannosaurus Prep</a></p>
+      <p><a href="sat.html">SAT vocab practice game</a> | <a href="gre.html">GRE vocab practice game</a></p>
+      <p><a href="sat-list.html">SAT words list</a> | <a href="gre-list.html">GRE words list</a></p>
       <p>email: webmaster at TyrannosaurusPrep dot com</p>
     </div>
 
