only paypal checkout, and added instructions

--- a/gre-list.html
+++ b/gre-list.html
@@ -60,14 +60,11 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-	<table><tr>
-	<td>
-		<img src="images/dino.png" style="width: 100px; height: auto;" />
-	</td>
-    <td style="width: 100%">
-		<p>For just $3.99, you'll gain access all five levels<br /> of Tyrannosaurus Prep for three months!</p>
+		<p>For just $3.99, you'll gain access to all five levels<br />of Tyrannosaurus Prep for three months!</p>
 
-		<table style="width: 100%;"><tr><td style="width: 40%;">
+
+<p>After completing your purchase with PayPal,<br />click on the "Return to Merchant" button<br /> to instantly receive your upgrade.</p>
+
 		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 		<input type="hidden" name="cmd" value="_xclick">
 		<input type="hidden" name="business" value="96663QRQKB9JS">
@@ -81,13 +78,13 @@
 		<input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHosted">
 		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 		</form>
-		</td>
-		<td style="width: 20%; position: relative; bottom: 8px;">or</td>
-		<td style="width: 40%; position: relative; bottom: 10px;">
+		
+		<!--
+		or
+		
 		<a href="https://checkout.opennode.com/p/6eb24af1-5cb1-41b4-afbf-77bafe7191d2" target="_blank"><img style="width:140px;" src="https://app.opennode.com/pay-with-bitcoin.svg"/></a>
-		</td>
-	</td>
-	</tr></table>
+		-->
+	<p>(PayPal will ask for your shipping address, but it won't be used.)</p>
   </div>
 
 </div>
