privacy policy needed margin

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,7 +21,7 @@
 
 <div id="content" class="outlined">
 
-<h3>Tyrannosaurus Prep does not use, store, or share any of our users' information. <i>All apps developed with <a href="https://expo.dev/">Expo</a> (including ours) ask for certain permissions, whether the app uses them or not.</i></h3>
+<h3 style="margin: 20px">Tyrannosaurus Prep does not use, store, or share any of our users' information. <i>All apps developed with <a href="https://expo.dev/">Expo</a> (including ours) ask for certain permissions, whether the app uses them or not.</i></h3>
 
 		
 </div>
